tests/valid/program_procedure_decl.cmt
program proceduress
begin

procedure soma (a : int, b : int) : int 
begin
    var resultado : int;
    resultado := a + b; 
    
    return resultado
end

end